styling tweaks, tinymce styling

--- a/src/static/config/css/builtin/layout.css
+++ b/src/static/config/css/builtin/layout.css
@@ -47,7 +47,7 @@
 	}
 
 	.navbar-brand {
-		padding-inline: 10px !important;
+		/* padding-inline: 10px !important; */
 		margin: 0 !important;
 	}
 
